# gptemtia

./: .gitignore  README.md  append_datalake.py  append_docs.py  append_feature_store.py  append_paths.py  append_readme.py  append_report_builder.py  append_settings.py  code_review.py  code_review_memory.py  code_review_prompt.txt  code_update_script.py  code_update_script2.py  code_update_script3.py  commit_changes.py  commit_message.txt  copy_scripts.py  debug_indent.py  done.txt  finish.sh  finish_task.py  finish_tool.py  finish_up.sh  fix_all.py  fix_all.sh  fix_arch.py  fix_batch.py  fix_core_p57.py  fix_data_lake.py  fix_data_lake2.py  fix_data_lake_get_feature_path.py  fix_datalake.py  fix_datalake.sh  fix_datalake2.py  fix_datalake3.py  fix_dl_indent.py  fix_docs.py  fix_docs_p57.py  fix_env.py  (+235 more)
commodity_fx_signal_bot/: .env.example  .gitignore  Makefile  README.md  code_review_prompt.txt  commit_message.txt  debug_quality.py  finish.sh  finish_phase48.sh  finish_up.sh  fix_final_report_builder4.py  fix_final_reportbuilder.py  fix_functions.py  fix_functions2.py  fix_functions3.py  fix_paths_list.py  fix_report_builder.py  fix_report_builder_again.py  fix_report_builder_again3.py  fix_test_import.py  fix_test_settings.py  fix_test_symbol_spec.py  main.py  patch_arch_cc.py  patch_data_integration.py  patch_data_lake.py  patch_data_lake_cc.py  patch_data_lake_cc2.py  patch_datalake.py  patch_docs.py  patch_env.py  patch_feature_store.py  patch_feature_store_cc.py  patch_featurestore.py  patch_paths.py  patch_paths2.py  patch_paths_cc.py  patch_paths_ensure.py  (+29 more)
(+2372 files in other folders)
