[project]
name = "commodity-fx-research-bot"
version = "0.38.0"
description = "Offline commodity and FX research, backtest, ML, paper simulation and reporting framework."
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
